# QA_GURU_HW_11

./: pyproject.toml
